--- a/Cifar10_withDescription.ipynb
+++ b/Cifar10_withDescription.ipynb
@@ -6,7 +6,7 @@
       "name": "Cifar10_withDescription.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMRs+Jg6jzgGosno6hmxYsb",
+      "authorship_tag": "ABX9TyNcIffZJY+ftIii9xykTktM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
         "from sklearn.metrics import confusion_matrix, classification_report\n",
         "import itertools"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,7 +105,7 @@
         "\n",
         "    return (nb_classes, batch_size, input_shape, x_train, x_test, y_train, y_test) "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -136,7 +136,7 @@
         "  plt.imshow(x_train[img], interpolation='none')\n",
         "  \n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "source": [
         "nb_classes, batch_size, input_shape, x_train, x_test, y_train, y_test = get_cifar10()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
         "b = tf.Variable(tf.zeros([categories]))\n",
         "\n",
         "y = tf.nn.softmax(tf.matmul(x, W) + b)\n",
-        "loss = -tf.reduce_mean(y_*tf.log(y))\n",
+        "loss = -tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits_v2(y_*tf.log(y)))\n",
         "\n",
         "\n",
         "# update = tf.train.AdamOptimizer(0.0001).minimize(loss)\n",
@@ -231,7 +231,7 @@
         "sess = tf.Session()\n",
         "sess.run(tf.global_variables_initializer())"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -248,7 +248,7 @@
         "    sess.run(update, feed_dict = {x:x_train, y_:y_train}) #BGD \n",
         "    train_acc = sess.run(accuracy, feed_dict={x:x_train, y_:y_train})\n",
         "    test_acc = sess.run(accuracy, feed_dict={x:x_test, y_:y_test})\n",
-        "    if(epoch % 10 == 0):\n",
+        "    if(epoch % 100 == 0):\n",
         "      print (\"epoch: %3d train_acc: %f test_acc: %f\" % (epoch,train_acc, test_acc))"
       ],
       "execution_count": null,
@@ -285,7 +285,77 @@
             "epoch: 260 train_acc: 0.353160 test_acc: 0.349600\n",
             "epoch: 270 train_acc: 0.354220 test_acc: 0.349700\n",
             "epoch: 280 train_acc: 0.354880 test_acc: 0.351700\n",
-            "epoch: 290 train_acc: 0.355720 test_acc: 0.351800\n"
+            "epoch: 290 train_acc: 0.355720 test_acc: 0.351800\n",
+            "epoch: 300 train_acc: 0.356440 test_acc: 0.353400\n",
+            "epoch: 310 train_acc: 0.357740 test_acc: 0.353900\n",
+            "epoch: 320 train_acc: 0.358340 test_acc: 0.354600\n",
+            "epoch: 330 train_acc: 0.359160 test_acc: 0.354600\n",
+            "epoch: 340 train_acc: 0.360280 test_acc: 0.355400\n",
+            "epoch: 350 train_acc: 0.360700 test_acc: 0.355800\n",
+            "epoch: 360 train_acc: 0.361720 test_acc: 0.357000\n",
+            "epoch: 370 train_acc: 0.362320 test_acc: 0.357800\n",
+            "epoch: 380 train_acc: 0.362980 test_acc: 0.359200\n",
+            "epoch: 390 train_acc: 0.363520 test_acc: 0.359400\n",
+            "epoch: 400 train_acc: 0.364240 test_acc: 0.360000\n",
+            "epoch: 410 train_acc: 0.364520 test_acc: 0.360300\n",
+            "epoch: 420 train_acc: 0.365260 test_acc: 0.361500\n",
+            "epoch: 430 train_acc: 0.365940 test_acc: 0.361900\n",
+            "epoch: 440 train_acc: 0.366540 test_acc: 0.362400\n",
+            "epoch: 450 train_acc: 0.366940 test_acc: 0.362800\n",
+            "epoch: 460 train_acc: 0.367620 test_acc: 0.363000\n",
+            "epoch: 470 train_acc: 0.368400 test_acc: 0.363700\n",
+            "epoch: 480 train_acc: 0.369260 test_acc: 0.364100\n",
+            "epoch: 490 train_acc: 0.369940 test_acc: 0.364700\n",
+            "epoch: 500 train_acc: 0.370080 test_acc: 0.364700\n",
+            "epoch: 510 train_acc: 0.370840 test_acc: 0.365200\n",
+            "epoch: 520 train_acc: 0.371100 test_acc: 0.366500\n",
+            "epoch: 530 train_acc: 0.371600 test_acc: 0.367300\n",
+            "epoch: 540 train_acc: 0.371980 test_acc: 0.367500\n",
+            "epoch: 550 train_acc: 0.372440 test_acc: 0.368100\n",
+            "epoch: 560 train_acc: 0.372900 test_acc: 0.368100\n",
+            "epoch: 570 train_acc: 0.373100 test_acc: 0.368400\n",
+            "epoch: 580 train_acc: 0.373380 test_acc: 0.368500\n",
+            "epoch: 590 train_acc: 0.373920 test_acc: 0.368500\n",
+            "epoch: 600 train_acc: 0.374580 test_acc: 0.368900\n",
+            "epoch: 610 train_acc: 0.375100 test_acc: 0.369800\n",
+            "epoch: 620 train_acc: 0.375680 test_acc: 0.370700\n",
+            "epoch: 630 train_acc: 0.376140 test_acc: 0.371000\n",
+            "epoch: 640 train_acc: 0.376640 test_acc: 0.371400\n",
+            "epoch: 650 train_acc: 0.376900 test_acc: 0.371700\n",
+            "epoch: 660 train_acc: 0.377440 test_acc: 0.371900\n",
+            "epoch: 670 train_acc: 0.377960 test_acc: 0.372400\n",
+            "epoch: 680 train_acc: 0.378040 test_acc: 0.372700\n",
+            "epoch: 690 train_acc: 0.378360 test_acc: 0.372600\n",
+            "epoch: 700 train_acc: 0.378700 test_acc: 0.373500\n",
+            "epoch: 710 train_acc: 0.378700 test_acc: 0.373500\n",
+            "epoch: 720 train_acc: 0.378780 test_acc: 0.373600\n",
+            "epoch: 730 train_acc: 0.379240 test_acc: 0.373500\n",
+            "epoch: 740 train_acc: 0.379200 test_acc: 0.374400\n",
+            "epoch: 750 train_acc: 0.379400 test_acc: 0.374600\n",
+            "epoch: 760 train_acc: 0.379780 test_acc: 0.374500\n",
+            "epoch: 770 train_acc: 0.380120 test_acc: 0.374600\n",
+            "epoch: 780 train_acc: 0.380160 test_acc: 0.374700\n",
+            "epoch: 790 train_acc: 0.380220 test_acc: 0.374700\n",
+            "epoch: 800 train_acc: 0.380360 test_acc: 0.374800\n",
+            "epoch: 810 train_acc: 0.380620 test_acc: 0.375200\n",
+            "epoch: 820 train_acc: 0.380820 test_acc: 0.375400\n",
+            "epoch: 830 train_acc: 0.380940 test_acc: 0.375600\n",
+            "epoch: 840 train_acc: 0.381580 test_acc: 0.375400\n",
+            "epoch: 850 train_acc: 0.381640 test_acc: 0.375200\n",
+            "epoch: 860 train_acc: 0.381760 test_acc: 0.375300\n",
+            "epoch: 870 train_acc: 0.382040 test_acc: 0.375400\n",
+            "epoch: 880 train_acc: 0.382320 test_acc: 0.375800\n",
+            "epoch: 890 train_acc: 0.382580 test_acc: 0.375400\n",
+            "epoch: 900 train_acc: 0.382560 test_acc: 0.376100\n",
+            "epoch: 910 train_acc: 0.382980 test_acc: 0.376400\n",
+            "epoch: 920 train_acc: 0.383160 test_acc: 0.376800\n",
+            "epoch: 930 train_acc: 0.383340 test_acc: 0.377600\n",
+            "epoch: 940 train_acc: 0.383420 test_acc: 0.378200\n",
+            "epoch: 950 train_acc: 0.384000 test_acc: 0.378700\n",
+            "epoch: 960 train_acc: 0.384120 test_acc: 0.378900\n",
+            "epoch: 970 train_acc: 0.384360 test_acc: 0.379000\n",
+            "epoch: 980 train_acc: 0.384720 test_acc: 0.378700\n",
+            "epoch: 990 train_acc: 0.384820 test_acc: 0.379200\n"
           ],
           "name": "stdout"
         }
